ML service done

--- a/ServerforFYP/ServerforFYP.csproj
+++ b/ServerforFYP/ServerforFYP.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Assests\" />
+    <Folder Include="Assets\" />
   </ItemGroup>
 
 </Project>
